crates/check_cli/tests/snapshots/main_commands_format/format_empty_svelte_js_files_write.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `file.svelte`

```svelte
<div></div>
```

# Emitted Messages

```block
Formatted 1 file in <TIME>. No fixes applied.
```
