crates/check_cli/tests/snapshots/main_commands_format/format_empty_svelte_ts_files_write.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
snapshot_kind: text
---
## `file.svelte`

```svelte
<script></script>
```

# Emitted Messages

```block
Formatted 1 file in <TIME>. No fixes applied.
```
