crates/check_cli/tests/snapshots/main_commands_format/format_help.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
# Emitted Messages

```block
Run the formatter on a set of files.

Usage: format [--write] [--staged] [--changed] [--since=REF] [PATH]...

Generic options applied to all files
        --indent-style=<tab|space>  The indent style.
        --indent-width=NUMBER  The size of the indentation, 2 by default
        --line-ending=<lf|crlf|cr>  The type of line ending.
        --line-width=NUMBER   What's the max width of a line. Defaults to 80.
        --attribute-position=<multiline|auto>  The attribute position style in HTML-ish languages.
                              Defaults to auto.
        --bracket-same-line=<true|false>  Put the `>` of a multi-line HTML or JSX element at the end
                              of the last line instead of being alone on the next line (does not
                              apply to self closing elements).
        --bracket-spacing=<true|false>  Whether to insert spaces around brackets in object literals.
                              Defaults to true.
        --expand=<auto|always|never>  Whether to expand arrays and objects on multiple lines. When
                              set to `auto`, object literals are formatted on multiple lines if the
                              first property has a newline, and array literals are formatted on a
                              single line if it fits in the line. When set to `always`, these
                              literals are formatted on multiple lines, regardless of length of the
                              list. When set to `never`, these literals are formatted on a single
                              line if it fits in the line. When formatting `package.json`, Check
                              will use `always` unless configured otherwise. Defaults to "auto".
        --use-editorconfig=<true|false>  Use any `.editorconfig` files to configure the formatter.
                              Configuration in `check.json` will override `.editorconfig`
                              configuration.
                              Default: `true`.

Formatting options specific to the JavaScript files
        --javascript-formatter-enabled=<true|false>  Control the formatter for JavaScript (and its
                              super languages) files.
        --jsx-quote-style=<double|single>  The type of quotes used in JSX. Defaults to double.
        --quote-properties=<preserve|as-needed>  When properties in objects are quoted. Defaults to
                              asNeeded.
        --trailing-commas=<all|es5|none>  Print trailing commas wherever possible in multi-line
                              comma-separated syntactic structures. Defaults to "all".
        --semicolons=<always|as-needed>  Whether the formatter prints semicolons for all statements
                              or only in for statements where it is necessary because of ASI.
        --arrow-parentheses=<always|as-needed>  Whether to add non-necessary parentheses to arrow
                              functions. Defaults to "always".
        --bracket-same-line=<true|false>  Whether to hug the closing bracket of multiline HTML/JSX
                              tags to the end of the last line, rather than being alone on the
                              following line. Defaults to false.
        --javascript-formatter-indent-style=<tab|space>  The indent style applied to JavaScript (and
                              its super languages) files.
        --javascript-formatter-indent-width=NUMBER  The size of the indentation applied to
                              JavaScript (and its super languages) files. Default to 2.
        --javascript-formatter-line-ending=<lf|crlf|cr>  The type of line ending applied to
                              JavaScript (and its super languages) files.
        --javascript-formatter-line-width=NUMBER  What's the max width of a line applied to
                              JavaScript (and its super languages) files. Defaults to 80.
        --javascript-formatter-quote-style=<double|single>  The type of quotes used in JavaScript
                              code. Defaults to double.
        --javascript-formatter-attribute-position=<multiline|auto>  The attribute position style in
                              JSX elements. Defaults to auto.
        --javascript-formatter-bracket-spacing=<true|false>  Whether to insert spaces around
                              brackets in object literals. Defaults to true.
        --javascript-formatter-expand=<auto|always|never>  Whether to expand arrays and objects on
                              multiple lines. When set to `auto`, object literals are formatted on
                              multiple lines if the first property has a newline, and array literals
                              are formatted on a single line if it fits in the line. When set to
                              `always`, these literals are formatted on multiple lines, regardless
                              of length of the list. When set to `never`, these literals are
                              formatted on a single line if it fits in the line. When formatting
                              `package.json`, Check will use `always` unless configured otherwise.
                              Defaults to "auto".
        --javascript-formatter-operator-linebreak=<before|after>  When breaking binary expressions
                              into multiple lines, whether to break them before or after the binary
                              operator. Defaults to "after".

Set of properties to integrate Check with a VCS software.
        --vcs-enabled=<true|false>  Whether Check should integrate itself with the VCS client
        --vcs-client-kind=<git>  The kind of client.
        --vcs-use-ignore-file=<true|false>  Whether Check should use the VCS ignore file. When
                              [true], Check will ignore the files specified in the ignore file.
        --vcs-root=PATH       The folder where Check should check for VCS files. By default, Check
                              will use the same folder where `check.json` was found.
                              If Check can't find the configuration, it will attempt to use the
                              current working directory. If no current working directory can't be
                              found, Check won't use the VCS integration, and a diagnostic will be
                              emitted
        --vcs-default-branch=BRANCH  The main branch of the project

The configuration of the filesystem
        --files-max-size=NUMBER  The maximum allowed size for source code files in bytes. Files
                              above this limit will be ignored for performance reasons. Defaults to
                              1 MiB
        --files-ignore-unknown=<true|false>  Tells Check to not emit diagnostics when handling files
                              that doesn't know

Global options applied to all commands
        --colors=<off|force>  Set the formatting mode for markup: "off" prints everything as plain
                              text, "force" forces the formatting of markup using ANSI even if the
                              console output is determined to be incompatible
        --use-server          Connect to a running instance of the Check daemon server.
        --verbose             Print additional diagnostics, and some diagnostics show more
                              information. Also, print out what files were processed and which ones
                              were modified.
        --config-path=PATH    Set the file path to the configuration file, or the directory path to
                              find `check.json` or `check.jsonc`. If used, it disables the default
                              configuration file resolution.
                              [env:CHECK_CONFIG_PATH: N/A]
        --max-diagnostics=<none|<NUMBER>>  Cap the amount of diagnostics displayed. When `none` is
                              provided, the limit is lifted.
                              [default: 20]
        --skip-parse-errors   Skip over files containing syntax errors instead of emitting an error
                              diagnostic.
        --no-errors-on-unmatched  Silence errors that would be emitted in case no files were
                              processed during the execution of the command.
        --error-on-warnings   Tell Check to exit with an error code if some diagnostics emit
                              warnings.
        --reporter=<json|json-pretty|github|junit|summary|gitlab>  Allows to change how diagnostics
                              and summary are reported.
        --log-file=ARG        Optional path to redirect log messages to.
                              If omitted, logs are printed to stdout.
        --log-level=<none|debug|info|warn|error>  The level of logging. In order, from the most
                              verbose to the least verbose: debug, info, warn, error.
                              The value `none` won't show any logging.
                              [default: none]
        --log-kind=<pretty|compact|json>  How the log should look like.
                              [default: pretty]
        --diagnostic-level=<info|warn|error>  The level of diagnostics to show. In order, from the
                              lowest to the most important: info, warn, error. Passing
                              `--diagnostic-level=error` will cause Check to print only diagnostics
                              that contain only errors.
                              [default: info]

Available positional items:
    PATH                      Single file, single path or list of paths.

Available options:
        --json-formatter-enabled=<true|false>  Control the formatter for JSON (and its super
                              languages) files.
        --json-formatter-indent-style=<tab|space>  The indent style applied to JSON (and its super
                              languages) files.
        --json-formatter-indent-width=NUMBER  The size of the indentation applied to JSON (and its
                              super languages) files. Default to 2.
        --json-formatter-line-ending=<lf|crlf|cr>  The type of line ending applied to JSON (and its
                              super languages) files.
        --json-formatter-line-width=NUMBER  What's the max width of a line applied to JSON (and its
                              super languages) files. Defaults to 80.
        --json-formatter-trailing-commas=<none|all>  Print trailing commas wherever possible in
                              multi-line comma-separated syntactic structures. Defaults to "none".
        --json-formatter-expand=<auto|always|never>  Whether to expand arrays and objects on
                              multiple lines. When set to `auto`, object literals are formatted on
                              multiple lines if the first property has a newline, and array literals
                              are formatted on a single line if it fits in the line. When set to
                              `always`, these literals are formatted on multiple lines, regardless
                              of length of the list. When set to `never`, these literals are
                              formatted on a single line if it fits in the line. When formatting
                              `package.json`, Check will use `always` unless configured otherwise.
                              Defaults to "auto".
        --json-formatter-bracket-spacing=<true|false>  Whether to insert spaces around brackets in
                              object literals. Defaults to true.
        --stdin-file-path=PATH  Use this option when you want to format code piped from `stdin`, and
                              print the output to `stdout`.
                              The file doesn't need to exist on disk, what matters is the extension
                              of the file. Based on the extension, Check knows how to format the
                              code.
                              Example: ```shell echo 'let a;' | check format
                              --stdin-file-path=file.js --write ```
        --write               Writes formatted files to a file system.
        --fix                 Alias of `--write`, writes formatted files to a file system.
        --staged              When set to true, only the files that have been staged (the ones
                              prepared to be committed) will be linted.
        --changed             When set to true, only the files that have been changed compared to
                              your `defaultBranch` configuration will be linted.
        --since=REF           Use this to specify the base branch to compare against when you're
                              using the --changed flag, and the `defaultBranch` is not set in your
                              check.json
    -h, --help                Prints help information

```
