crates/check_cli/tests/snapshots/main_commands_format/format_json_trailing_commas_overrides_all.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `check.json`

```json
{
  "json": {
    "parser": { "allowTrailingCommas": true },
    "formatter": { "trailingCommas": "none" }
  },
  "overrides": [
    {
      "includes": ["file.json"],
      "json": {
        "formatter": { "trailingCommas": "all" }
      }
    }
  ]
}
```

## `file.json`

```json
{
	"loreum_ipsum_lorem_ipsum": "bar",
	"loreum_ipsum_lorem_ipsum": "bar",
	"loreum_ipsum_lorem_ipsum": "bar",
	"loreum_ipsum_lorem_ipsum": "bar",
	"loreum_ipsum_lorem_ipsum": "bar",
}

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
