crates/check_cli/tests/snapshots/main_commands_format/format_json_when_allow_trailing_commas_write.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `check.json`

```json
{
  "json": {
    "parser": { "allowTrailingCommas": true }
  }
}
```

## `file.json`

```json
{
	"loreum_ipsum_lorem_ipsum": "bar",
	"loreum_ipsum_lorem_ipsum": "bar",
	"loreum_ipsum_lorem_ipsum": "bar",
	"loreum_ipsum_lorem_ipsum": "bar",
	"loreum_ipsum_lorem_ipsum": "bar"
}

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
